<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_border"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/pointsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/pts"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/goalDTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/gd"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/goalATextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/ga"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/goalFTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/gf"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/drawTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/d"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/lossTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/l"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/winTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/w"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/gamesTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/mp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/teamNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/team_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/rankTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/rank"
        android:textSize="16sp" />

</LinearLayout>
